<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="whatsappModel"
            type="com.github.andresvasquez.kotlinevents.ui.about.AboutModel" />

        <variable
            name="githubModel"
            type="com.github.andresvasquez.kotlinevents.ui.about.AboutModel" />

        <variable
            name="linkedInModel"
            type="com.github.andresvasquez.kotlinevents.ui.about.AboutModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/about_shape"
        android:padding="@dimen/space_lg"
        tools:context=".ui.about.AboutFragment">


        <TextView
            android:id="@+id/about_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/trade_winds"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/space_lg"
            android:text="@string/about_title"
            android:textSize="@dimen/text_title"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/about_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/space_lg"
            android:text="@string/about_content"
            android:textSize="@dimen/text_md"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/about_title" />

        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/space_lg"
            android:layout_marginBottom="@dimen/space_md"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/about_description" />

        <ImageView
            android:id="@+id/github_icon"
            applyModel="@{githubModel}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_lg"
            android:layout_marginBottom="@dimen/space_lg"
            android:contentDescription="@string/about_github_description"
            app:layout_constraintEnd_toStartOf="@+id/linkedin_icon"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/separator"
            tools:src="@drawable/ic_launcher_foreground" />

        <ImageView
            android:id="@+id/linkedin_icon"
            applyModel="@{linkedInModel}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_lg"
            android:layout_marginBottom="@dimen/space_lg"
            android:contentDescription="@string/about_linkedin_description"
            app:layout_constraintEnd_toStartOf="@+id/whatsapp_icon"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/github_icon"
            app:layout_constraintTop_toBottomOf="@id/separator"
            tools:src="@drawable/ic_launcher_foreground" />

        <ImageView
            android:id="@+id/whatsapp_icon"
            applyModel="@{whatsappModel}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_lg"
            android:layout_marginBottom="@dimen/space_lg"
            android:contentDescription="@string/about_whatsapp_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/linkedin_icon"
            app:layout_constraintTop_toBottomOf="@id/separator"
            tools:src="@drawable/ic_launcher_foreground" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>