<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.github.andresvasquez.kotlinevents.ui.detail.EventDetailViewModel" />

        <variable
            name="event"
            type="com.github.andresvasquez.event_repository.model.EventDetailDomain" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/cover_image"
                buildCoverImage="@{event}"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/event_image_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/item_title_text"
                style="@style/event_title_style"
                android:padding="@dimen/space_md"
                android:text="@{event.name}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cover_image"
                tools:text="My event" />

            <androidx.cardview.widget.CardView
                android:id="@+id/event_properties_card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_sm"
                android:padding="@dimen/space_md"
                app:cardCornerRadius="@dimen/space_md"
                app:cardElevation="@dimen/space_sm"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/item_title_text">

                <LinearLayout
                    android:id="@+id/event_properties_ll"
                    buildEventProperties="@{event}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/space_md" />

            </androidx.cardview.widget.CardView>

            <HorizontalScrollView
                android:id="@+id/chips"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_sm"
                android:layout_marginBottom="@dimen/space_md"
                android:paddingStart="@dimen/space_sm"
                android:paddingEnd="@dimen/space_sm"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/event_properties_card">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/classification_chips"
                    buildChipsDetails="@{event}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:singleLine="true"
                    app:singleSelection="true" />
            </HorizontalScrollView>

            <androidx.cardview.widget.CardView
                android:id="@+id/event_location_card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space_sm"
                android:layout_marginTop="@dimen/space_lg"
                android:padding="@dimen/space_md"
                app:cardCornerRadius="@dimen/space_md"
                app:cardElevation="@dimen/space_sm"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chips">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/space_md">

                    <TextView
                        viewLocationVisibility="@{event}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_lg"
                        android:text="@string/detail_location"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/text_lg" />

                    <LinearLayout
                        android:id="@+id/location_properties"
                        buildLocationProperties="@{event}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_lg"
                        android:orientation="vertical" />

                    <ImageView
                        buildLocationImage="@{event}"
                        viewLocationVisibility="@{event}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/space_lg"
                        android:contentDescription="@string/event_description" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_xxl"
                android:layout_marginTop="@dimen/space_xxl"
                android:layout_marginEnd="@dimen/space_xxl"
                android:text="@string/detail_buy"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/event_location_card" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>