<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="event"
            type="com.github.andresvasquez.event_repository.model.EventListDomain" />

        <variable
            name="clickListener"
            type="com.github.andresvasquez.kotlinevents.ui.list.EventClickListener" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_sm"
        android:padding="@dimen/space_md"
        app:cardCornerRadius="@dimen/space_md"
        app:cardElevation="@dimen/space_sm">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{()-> clickListener.onClick(event)}"
            android:orientation="vertical"
            android:padding="@dimen/space_md">

            <TextView
                android:id="@+id/item_title_text"
                style="@style/event_title_style"
                android:onClick="@{()-> clickListener.onClick(event)}"
                android:text="@{event.name}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="My event" />

            <ImageView
                android:id="@+id/item_event_image"
                eventThumbnail="@{event}"
                android:layout_width="146dp"
                android:layout_height="102dp"
                android:adjustViewBounds="true"
                android:background="@color/gray"
                android:contentDescription="@string/event_image_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/item_title_text"
                tools:srcCompat="@drawable/ic_broken_image" />

            <LinearLayout
                android:id="@+id/extra_info_ll"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="@dimen/space_sm"
                android:paddingEnd="@dimen/space_sm"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/item_event_image"
                app:layout_constraintTop_toTopOf="@id/item_event_image">

                <TextView
                    android:id="@+id/date_text"
                    dateAndAddress="@{event}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text=""
                    android:textSize="@dimen/text_md"
                    android:textStyle="bold"
                    tools:text="24/09/2021, Hollywood studio central park" />

                <TextView
                    android:id="@+id/item_price_from"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/text_sm"
                    android:gravity="start"
                    android:text="@string/price_from"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_chip"
                    tools:text="Prices Starting" />

                <TextView
                    android:id="@+id/item_price_overview"
                    priceReference="@{event}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/text_md"
                    tools:text="100 - 200 USD" />

                <TextView
                    android:id="@+id/view_more"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:onClick="@{()-> clickListener.onClick(event)}"
                    android:paddingBottom="@dimen/space_sm"
                    android:text="@string/view_more"
                    android:textColor="@color/colorDark"
                    android:textStyle="bold|italic"
                    tools:layout_editor_absoluteX="4dp" />
            </LinearLayout>

            <HorizontalScrollView
                android:id="@+id/chips"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_sm"
                android:layout_marginBottom="@dimen/space_sm"
                android:paddingStart="@dimen/space_sm"
                android:paddingEnd="@dimen/space_sm"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/extra_info_ll">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/classification_chips"
                    buildChips="@{event}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:singleLine="true"
                    app:singleSelection="true" />
            </HorizontalScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>